testdata/accept/gfx03.lc
renderWire fb = let
  modelViewProj = Uniform "MVP2" :: Mat 4 4 Float
  blendFun x = Blend x ((SrcAlpha,OneMinusSrcAlpha),(SrcAlpha,OneMinusSrcAlpha)) (V4 1.0 1.0 1.0 1.0)
  blend'' = blendFun (FuncAdd,FuncAdd)
  blend = Blend (FuncSubtract,FuncAdd) ((SrcColor,SrcColor),(SrcColor,OneMinusSrcAlpha)) (V4 0.0 1.0 0.0 0.0)
  blend' = NoBlending
  polyMode          = PolygonLine 20.0
  polyMode'         = PolygonFill
  polyMode''        = PolygonPoint (PointSize 10.0)
  cull = CullNone
  cull' = CullFront CW
  rasterCtx         = TriangleCtx cull polyMode NoOffset FirstVertex
  fragmentCtx       = AccumulationContext (DepthOp Always False, ColorOp blend' (V4 True True False False))
  vertexShader v    = let v2 = v3FToV4F v in VertexOut (PrimMulMatVec modelViewProj v2) 1.0 () ()
  vertexStream      = fetch "stream" Triangle (Attribute "position" :: Vec 3 Float)
  primitiveStream   = Transform vertexShader vertexStream
  fragmentStream    = Rasterize rasterCtx primitiveStream
  fragmentShader' = FragmentShaderRastDepth $ \v -> (V4 1.0 0.4 0.0 0.2)
  fragmentShader = FragmentShaderRastDepth $ \v -> (V4 0.0 0.4 0.0 1.0)
  frame             = accumulate fragmentCtx PassAll fragmentShader fragmentStream fb
  in frame

render fb = let
  modelViewProj = Uniform "MVP2" :: Mat 4 4 Float
  blendFun x = Blend x ((SrcAlpha,OneMinusSrcAlpha),(SrcAlpha,OneMinusSrcAlpha)) (V4 1.0 1.0 1.0 1.0)
  blend'' = blendFun (FuncAdd,FuncAdd)
  blend = Blend (Max,FuncAdd) ((SrcColor,SrcColor),(SrcColor,OneMinusSrcAlpha)) (V4 0.0 1.0 0.0 0.0)
  blend' = NoBlending
  polyMode          = PolygonLine 20.0
  polyMode'         = PolygonFill
  polyMode''        = PolygonPoint (PointSize 10.0)
  cull = CullNone
  cull' = CullFront CW
  rasterCtx         = TriangleCtx cull polyMode' NoOffset FirstVertex
  fragmentCtx       = AccumulationContext (DepthOp Less False, ColorOp blend' (V4 True True False False))
  vertexShader v    = let v2 = v3FToV4F v in VertexOut (PrimMulMatVec modelViewProj v2) 1.0 () (Smooth v2)
  vertexStream      = fetch "stream" Triangle (Attribute "position" :: Vec 3 Float)
  primitiveStream   = Transform vertexShader vertexStream
  fragmentStream    = Rasterize rasterCtx primitiveStream
  fragmentShader' = FragmentShaderRastDepth $ \v -> (V4 1.0 0.4 0.0 0.2)
  fragmentShader = FragmentShaderRastDepth $ \v -> (PrimAdd v (V4 1.0 1.4 1.0 0.6))
  frame             = accumulate fragmentCtx PassAll fragmentShader fragmentStream fb
  in frame

render' fb = let
  modelViewProj = Uniform "MVP" :: Mat 4 4 Float
  blendFun x = Blend x ((SrcAlpha,OneMinusSrcAlpha),(SrcAlpha,OneMinusSrcAlpha)) (V4 1.0 1.0 1.0 1.0)
  blend'' = blendFun (FuncAdd,FuncAdd)
  blend = Blend (FuncAdd,FuncAdd) ((SrcAlpha,OneMinusSrcAlpha),(SrcAlpha,OneMinusSrcAlpha)) (V4 1.0 1.0 1.0 1.0)
  blend' = NoBlending
  polyMode          = PolygonLine 20.0
  polyMode'         = PolygonFill
  polyMode''        = PolygonPoint (PointSize 10.0)
  cull = CullNone
  cull' = CullFront CW
  rasterCtx         = TriangleCtx cull polyMode' NoOffset LastVertex
  fragmentCtx       = AccumulationContext (DepthOp Less False, ColorOp blend (V4 True True True True))
  vertexShader' v    = let v2 = v3FToV4F v in VertexOut (PrimMulMatVec modelViewProj v2) 1.0 () (Flat v2)
  vertexShader v    = VertexOut (PrimMulMatVec modelViewProj v) 1.0 () (Flat v)
  vertexStream      = fetch "stream4" Triangle (Attribute "position4" :: Vec 4 Float)
  primitiveStream   = Transform vertexShader vertexStream
  fragmentStream    = Rasterize rasterCtx primitiveStream
  fragmentShader' = FragmentShaderRastDepth $ \v -> (V4 1.0 0.4 0.0 0.2)
  fragmentShader = FragmentShaderRastDepth $ \v -> (PrimMul v (V4 1.0 1.4 1.0 0.6))
  frame             = accumulate fragmentCtx PassAll fragmentShader fragmentStream fb
  in frame

main = let
  bgColor = V4 0.5 0.0 0.4 1.0
  bgColor' = V4 0.2 0.2 0.4 1.0
  emptyFB = FrameBuffer (depthImage1 1000.0,colorImage1 bgColor)
  modelViewProj = Uniform "MVP" :: Mat 4 4 Float
  --fx a = render modelViewProj a
  --out = fx (fx emptyFB)
  --out = fx emptyFB
  --out = render modelViewProj emptyFB
  out = renderWire (render (render' emptyFB))
  in ScreenOut out
